# poetry_study

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  settings.py
.github/workflows/: ci.yml
poetry_study_app/: .env  main.py  settings.py
test/: test_run.py
