[tool.poetry]
name = "pydantic-tests"
version = "0.1.0"
description = ""
authors = ["Андрей Мартынов <real.cloudhunter@gmail.com>"]
readme = "README.md"
packages = [{include = "pydantic_tests"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.2"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
