[tool.poetry]
name = "pydantic-tests"
version = "0.1.0"
description = ""
authors = ["Андрей Мартынов <real.cloudhunter@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_study_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
loguru = "^0.7.0"
pydantic-settings = "^2.0.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
mypy = "^1.4.1"
pylint = "^2.17.5"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
